...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/album_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:hint="@string/album_name"
                android:padding="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/album_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/album_release_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:hint="@string/album_release_date"
                android:padding="16dp"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_calendar"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <!-- create a input date picker -->

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/album_release_date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="date"
                    />
            </com.google.android.material.textfield.TextInputLayout>
...
                android:hint="@string/album_description_create"
                android:padding="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/album_description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/album_genre_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:hint="@string/album_genre_create"
                    android:padding="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    >

                    <!--add a AutoCompleteTextView for default elements matching TextInputEditText style -->
                    <AutoCompleteTextView
                        android:id="@+id/album_genre_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:inputType="text"
                        android:padding="16dp" />

...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/album_record_label_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:hint="@string/album_record_label_create"
                    android:padding="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/album_record_label_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:inputType="text"
                        android:padding="16dp" />
                </com.google.android.material.textfield.TextInputLayout>
...
                android:hint="@string/album_cover"
                android:padding="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/album_cover_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/album_cover_preview"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_album" />

            <Button
                android:id="@+id/album_create_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/menu_album_create"
                android:enabled="false"
                android:alpha="0.5"
                />
            <ProgressBar
                android:id="@+id/album_create_loading_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:scaleX="0.5"
...
