...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/albumId"
                android:layout_width="0dp"
                android:layout_height="0dp" />

            <ImageView
                android:id="@+id/albumDetailImageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="fitStart"
                android:contentDescription="@string/nav_header_desc"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:srcCompat="@drawable/ic_album" />

            <TextView
                android:id="@+id/albumGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/album_genre"
                />

            <TextView
                android:id="@+id/albumRecordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/album_record_label" />

            <TextView
                android:id="@+id/albumDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/album_description" />

            <TextView
                android:id="@+id/albumTracks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:paddingTop="24dp"
                android:text="@string/tracks" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/track_list_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:padding="8dp"
                android:clipToPadding="false" />
            <Button
                android:id="@+id/addTrackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_add_track"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                />
        </LinearLayout>
    </ScrollView>
...
