<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".ui.view.AlbumAddTrack">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin_content"
            android:paddingTop="0dp"
            android:paddingRight="@dimen/activity_horizontal_margin_content"
            android:paddingBottom="@dimen/activity_vertical_margin_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/track_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:hint="@string/track_name"
                android:padding="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/track_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/track_duration_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:hint="@string/track_duration_label"
                android:padding="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/track_duration_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="time"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/track_create_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/track_create_button"
                android:enabled="false"
                android:alpha="0.5"
                />
            <ProgressBar
                android:id="@+id/track_create_loading_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
