<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_user_circle"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/albumList"
            android:icon="@drawable/ic_album"
            android:title="@string/menu_album_list" />
        <item
            android:id="@+id/performerList"
            android:icon="@drawable/ic_artist"
            android:title="@string/menu_performer_list" />
        <item
            android:id="@+id/collectorList"
            android:icon="@drawable/ic_users"
            android:title="@string/menu_collector_list" />
        <item
            android:id="@+id/albumCreate"
            android:icon="@drawable/ic_album"
            android:title="@string/menu_album_create" />
        <item
            android:id="@+id/performerCreate"
            android:icon="@drawable/ic_artist"
            android:title="@string/menu_performer_create" />
        <item
            android:id="@+id/myCollectionList"
            android:icon="@drawable/ic_my_collections"
            android:title="@string/menu_my_collections" />
    </group>
</menu>